--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Description</title>
-  </head>
-  <body>
-    <h1><%= book.title %></h1>
-    <h2><%= book.author %></h2>
-    <h3>Description</h3>
-    <p><%= book.description %></p>
-  </body>
-</html>
+<% layout('./layouts/boilerplate') %>
+<h1><%= book.title %></h1>
+<h2><%= book.author %></h2>
+<h3>Description</h3>
+<p><%= book.description %></p>
