--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -117,6 +117,14 @@
             </p>
             <p><%=review.body%></p>
             <form
+              class="d-inline"
+              action="/books/<%=book._id%>/reviews/<%=review._id%>/edit"
+            >
+              <button class="btn btn-sm btn-warning mb-3 ms-2">Edit</button>
+            </form>
+
+            <form
+              class="d-inline"
               action="/books/<%=book._id%>/reviews/<%=review._id%>?_method=DELETE"
               method="POST"
             >
@@ -124,7 +132,7 @@
             </form>
           </div>
         </div>
-        <%}%>
+        <% } %>
       </div>
     </div>
   </div>
