--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,5 +31,14 @@
         />
       </form>
     </div>
+    <div class="navbar-nav ml-auto">
+      <%if(!currentUser){%>
+      <a class="nav-link" href="/register">Register</a>
+      <a class="nav-link" href="/login">Login</a>
+      <%}else {%>
+      <!-- <a class="nav-link" href="/users/<%=currentUser._id%>">My Account</a> -->
+      <a class="nav-link" href="/logout">Logout</a>
+      <%}%>
+    </div>
   </div>
 </nav>
