--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,2 +1,112 @@
 <% layout('./layouts/boilerplate') %>
-<h2>--- You are about to edit your Book Review here ---</h2>
+<link rel="stylesheet" href="/stylesheets/starheart-rating.css" />
+<div class="container">
+  <div class="book-wrapper">
+    <div class="row justify-content-center">
+      <div class="col-lg-4 mb-3">
+        <div class="card shadow mb-3" style="width: 18rem">
+          <img
+            src="<%=book.image%>"
+            class="card-img-top"
+            alt="Cover Not Available"
+          />
+          <div class="card-body text-center">
+            <h6 class="card-title">Average rating: <%=book.avgRating%></h6>
+            <h6 class="card-subtitle">Liked by <%=book.liked%>%</h6>
+            <form action="/books/<%= book._id %>?_method=DELETE" method="POST">
+              <button class="btn btn-danger my-3">Delete</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-6 offset-4 mb-3">
+        <h2>Edit Review</h2>
+        <form
+          action="/books/<%=book._id%>/reviews/<%=review._id%>?_method=PUT"
+          method="POST"
+          class="mb-3 validated-form"
+          novalidate
+        >
+          <div class="my-3">
+            <fieldset class="starability-heart">
+              <input
+                type="radio"
+                id="no-rate"
+                class="input-no-rate"
+                name="review[rating]"
+                value="1"
+                checked
+                aria-label="No rating."
+              />
+              <input
+                type="radio"
+                id="first-rate1"
+                name="review[rating]"
+                value="1"
+              />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input
+                type="radio"
+                id="first-rate2"
+                name="review[rating]"
+                value="2"
+              />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input
+                type="radio"
+                id="first-rate3"
+                name="review[rating]"
+                value="3"
+              />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input
+                type="radio"
+                id="first-rate4"
+                name="review[rating]"
+                value="4"
+              />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input
+                type="radio"
+                id="first-rate5"
+                name="review[rating]"
+                value="5"
+              />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+          </div>
+          <div class="form-group mb-3">
+            <label class="form-label" for="body">Review</label>
+            <textarea
+              class="form-control"
+              name="review[body]"
+              id="body"
+              cols="30"
+              rows="3"
+              required
+            >
+<%=review.body%></textarea
+            >
+
+            <div class="invalid-feedback">
+              You cannot submit an empty review!
+            </div>
+          </div>
+          <button class="btn btn-success mt-2">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+      const rating = <%= review['rating'] %>;
+      const editInputs = document.querySelectorAll('input');
+
+  for (let input of editInputs) {
+    if (parseInt(input.value) === rating) {
+      input.checked = true;
+    }
+  }
+</script>
