--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -27,7 +27,7 @@
             </h3>
             <h4><%=book.series%></h4>
             <p id="year">Published: <%=book.year%> | Pages: <%=book.pages%></p>
-            <h6><%=book.genre%></h6>
+            <h6><%=book_genres%></h6>
             <h4 class="card-title my-1">Description</h4>
             <p class="card-body"><%=book.description%></p>
           </div>
