--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -13,9 +13,11 @@
           <div class="card-body text-center">
             <h6 class="card-title">Average rating: <%=book.avgRating%></h6>
             <h6 class="card-subtitle">Liked by <%=book.liked%>%</h6>
+            <%if(currentUser && currentUser.isAdmin){%>
             <form action="/books/<%= book._id %>?_method=DELETE" method="POST">
               <button class="btn btn-danger my-3">Delete</button>
             </form>
+            <%}%>
           </div>
         </div>
       </div>
@@ -114,7 +116,9 @@
         <div class="card shadow mb-3">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="#"><%=review.author.username%></a>
+              <a href="/users/<%=review.author._id%>"
+                ><%=review.author.username%></a
+              >
             </h5>
             <p class="starability-result" data-rating="<%=review.rating%>">
               Rated: <%=review.rating%> stars
