--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -94,6 +94,16 @@
             />
             <div class="valid-feedback">Looks good!</div>
           </div>
+          <div class="form-group mb-3">
+            <label class="form-label" for="adminCode">Admin Code</label>
+            <input
+              type="password"
+              class="form-control"
+              id="adminCode"
+              name="adminCode"
+              placeholder="Enter the Admin Code"
+            />
+          </div>
           <div class="form-group text-center mb-3">
             <button class="btn btn-primary">Register</button>
           </div>
