--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -124,7 +124,8 @@
               Rated: <%=review.rating%> stars
             </p>
             <p><%=review.body%></p>
-            <%if(currentUser && review.author.equals(currentUser._id)){%>
+            <%if(currentUser && review.author.equals(currentUser._id) ||
+            currentUser && currentUser.isAdmin){%>
             <form
               class="d-inline"
               action="/books/<%=book._id%>/reviews/<%=review._id%>/edit"
