--- a/views/users/userProfile.ejs
+++ b/views/users/userProfile.ejs
@@ -7,7 +7,7 @@
   }
 </style>
 
-<div class="container">
+<div class="container mb-5">
   <h2 class="text-primary"><%=foundUser.firstname%> <%=foundUser.lastname%></h2>
   <img
     class="img-thumbnail my-3"
