my account added

--- a/views/users/userProfile.ejs
+++ b/views/users/userProfile.ejs
@@ -15,8 +15,13 @@
     src="<%=foundUser.avatar%>"
     alt="user display image"
   />
-  <h3>Bookshelf: TBD</h3>
-  <h3>User Reviews:</h3>
+  <h3>Bookshelf:</h3>
+  <% if (currentUser && currentUser._id.equals(foundUser._id)) { %>
+  <p>Your bookshelf is currently empty. <a href="/books">Add Books</a></p>
+  <% } else { %>
+  <p>This user's bookshelf is currently empty. Check back later!</p>
+  <% } %>
+  <h3>Reviewed:</h3>
   <% if (userReviews && userReviews.length > 0) { %> <%
   userReviews.forEach((review) => { %>
   <div class="card shadow mb-3">
@@ -31,6 +36,6 @@
     </div>
   </div>
   <% }); %> <% } else { %>
-  <p>No reviews available for this user.</p>
+  <p>You have not posted any book reviews yet.</p>
   <% } %>
 </div>
