--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,7 +17,18 @@
 </button>
 
 <div class="container">
-  <h1 class="mb-5">Browse The Most Popular Books</h1>
+  <div class="d-flex justify-content-between align-items-center mb-5">
+    <h1>Popular Books</h1>
+    <form class="d-flex" role="search">
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        id="searchbox"
+        aria-label="Search"
+      />
+    </form>
+  </div>
   <div class="box mb-3">
     <div
       class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4 mb-3"
