--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -121,7 +121,7 @@
         <%} %>
         <h3 class="mt-4 mb-3">Reviews</h3>
         <% if (book.reviews.length === 0) { %>
-        <p>No reviews for this book yet. Be the first to post!</p>
+        <p>There are no reviews for this book yet. Be the first to review!</p>
         <% } else { %> <% for(let review of book.reviews) { %>
         <div class="card shadow mb-3">
           <div class="card-body">
