--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,22 +21,13 @@
           <a class="nav-link" href="/books">Books</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          id="searchbox"
-          aria-label="Search"
-        />
-      </form>
     </div>
     <div class="navbar-nav ml-auto">
       <%if(!currentUser){%>
       <a class="nav-link" href="/register">Register</a>
       <a class="nav-link" href="/login">Login</a>
       <%}else {%>
-      <!-- <a class="nav-link" href="/users/<%=currentUser._id%>">My Account</a> -->
+      <a class="nav-link" href="/users/<%=currentUser._id%>">My Account</a>
       <a class="nav-link" href="/logout">Logout</a>
       <%}%>
     </div>
