empty search results display updated

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -50,6 +50,9 @@
       <%}%>
     </div>
   </div>
+  <div id="no-results-message" class="text-center" style="display: none">
+    <h5>We couldn't find any matches. Please try again.</h5>
+  </div>
 </div>
 
 <script src="/javascripts/book-index.js"></script>
