userprofile bookshelf displays books

--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -22,6 +22,7 @@
                 class="btn btn-warning my-3"
                 id="want-to-read-btn"
                 data-book-id="<%= book._id %>"
+                type="submit"
               >
                 Want To Read
               </button>
