--- a/views/users/forgot-password.ejs
+++ b/views/users/forgot-password.ejs
@@ -2,9 +2,9 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <form action="/forgot-password" method="POST" class="shadow p-4 rounded">
-      <h2 class="mb-4">Forgot Password</h2>
+      <h2 class="mb-4 text-center">Account Recovery</h2>
       <div class="form-group mb-3">
-        <label for="email" class="mb-2">Enter email</label>
+        <label for="email" class="mb-2">Enter your email here:</label>
         <input
           type="email"
           name="email"
