invalid email bug resolved

--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -62,7 +62,7 @@
     <div class="row my-3">
       <div class="col-6 offset-4">
         <% if (!userHasReviewed && currentUser) { %>
-        <h2>Leave A Review</h2>
+        <h2>Write A Review</h2>
         <form
           action="/books/<%=book._id%>/reviews"
           method="POST"
