--- a/views/users/editUserProfile.ejs
+++ b/views/users/editUserProfile.ejs
@@ -4,7 +4,12 @@
     <div class="card shadow">
       <div class="card-body">
         <h2 class="card-title mb-3">Edit Account</h2>
-        <form action="" method="" class="validated-form" novalidate>
+        <form
+          action="/users/<%= foundUser._id %>?_method=PUT"
+          method="POST"
+          class="validated-form"
+          novalidate
+        >
           <div class="form-group mb-3">
             <label class="form-label" for="firstname">First Name</label>
             <input
