change password implemented

--- a/views/users/change-password.ejs
+++ b/views/users/change-password.ejs
@@ -1,1 +1,63 @@
-<h1>You are trying to change password for your account</h1>
+<% layout('layouts/boilerplate')%>
+<div class="container .d-flex justify-content-center align-items-center mt-5">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+      <div class="card shadow p-3 rounded">
+        <div class="card-body">
+          <h1 class="card-title fs-2 mb-3">Change Password</h1>
+
+          <form
+            action="/users/<%= foundUser._id %>/change-password?_method=PUT"
+            method="POST"
+            class="validated-form"
+            novalidate
+          >
+            <div class="form-group mb-3">
+              <label class="form-label" for="currentPassword"
+                >Current Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="currentPassword"
+                name="currentPassword"
+                placeholder="Enter current password"
+                autofocus
+                required
+              />
+            </div>
+
+            <div class="form-group mb-3">
+              <label class="form-label" for="newPassword">New Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="newPassword"
+                name="newPassword"
+                placeholder="Enter new password"
+                required
+              />
+            </div>
+
+            <div class="form-group mb-3">
+              <label class="form-label" for="confirmPassword"
+                >Confirm Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="confirmPassword"
+                name="confirmPassword"
+                placeholder="Confirm new password"
+                required
+              />
+            </div>
+            <div class="text-center">
+              <button class="btn btn-success my-3 py-2">Update Password</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
