--- a/views/users/forgot-password.ejs
+++ b/views/users/forgot-password.ejs
@@ -7,7 +7,7 @@
       class="shadow p-4 rounded validated-form"
       novalidate
     >
-      <h2 class="mb-4 text-center">Account Recovery</h2>
+      <h1 class="mb-4 text-center fs-4">Account Recovery</h1>
       <div class="form-group mb-3">
         <label for="email" class="mb-2">Enter your email here:</label>
         <input
