--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,7 +3,7 @@
   <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
     <div class="card shadow">
       <div class="card-body">
-        <h2 class="card-title mb-3">Create An Account</h2>
+        <h1 class="card-title mb-3 fs-2">Create An Account</h1>
         <form
           action="/register"
           method="POST"
