--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,7 +4,7 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card shadow">
         <div class="card-body">
-          <h1 class="card-title">Sign in</h1>
+          <h1 class="card-title fs-2">Sign in</h1>
           <form action="/login" method="POST" class="validated-form" novalidate>
             <div class="form-group mb-3">
               <label class="form-label" for="username">Username</label>
