--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -4,7 +4,7 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card shadow">
         <div class="card-body">
-          <h1 class="card-title">Reset Password</h1>
+          <h1 class="card-title fs-2">Reset Password</h1>
 
           <form
             action="/reset/<%= token %>"
